--- a/pkgs/sagemath-m4ri-m4rie/tox.ini
+++ b/pkgs/sagemath-m4ri-m4rie/tox.ini
@@ -1,10 +1,10 @@
 # To build and test in the tox environment:
 #
-# ./sage -sh -c '(cd pkgs/sagemath-linbox && tox -v -v -v -e sagepython)'
+# ./sage -sh -c '(cd pkgs/sagemath-m4ri-m4rie && tox -v -v -v -e sagepython)'
 #
 # To test interactively:
 #
-# pkgs/sagemath-linbox/.tox/sagepython/bin/python
+# pkgs/sagemath-m4ri-m4rie/.tox/sagepython/bin/python
 #
 [tox]
 envlist =
