--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -32,6 +32,7 @@ jobs:
         sagemath_graphs
         sagemath_homfly
         sagemath_libbraiding
+        sagemath_m4ri_m4rie
         sagemath_modules
         sagemath_nauty
         sagemath_ntl
@@ -53,6 +54,7 @@ jobs:
         sagemath_glpk-check
         sagemath_graphs-check
         sagemath_homfly-check
+        sagemath_m4ri_m4rie-check
         sagemath_modules-check
         sagemath_nauty-check
         sagemath_ntl-check
@@ -108,6 +110,7 @@ jobs:
         sagemath_graphs
         sagemath_homfly
         sagemath_libbraiding
+        sagemath_m4ri_m4rie
         sagemath_modules
         sagemath_nauty
         sagemath_ntl
@@ -129,6 +132,7 @@ jobs:
         sagemath_glpk-check
         sagemath_graphs-check
         sagemath_homfly-check
+        sagemath_m4ri_m4rie-check
         sagemath_modules-check
         sagemath_nauty-check
         sagemath_ntl-check
@@ -209,6 +213,7 @@ jobs:
         sagemath_graphs
         sagemath_homfly
         sagemath_libbraiding
+        sagemath_m4ri_m4rie
         sagemath_modules
         sagemath_nauty
         sagemath_ntl
@@ -230,6 +235,7 @@ jobs:
         sagemath_glpk-check
         sagemath_graphs-check
         sagemath_homfly-check
+        sagemath_m4ri_m4rie-check
         sagemath_modules-check
         sagemath_nauty-check
         sagemath_ntl-check
